fix: authentication guard

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "jsxBracketSameLine": false,
   "printWidth": 130,
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
-  "importOrder": ["<THIRD_PARTY_MODULES>", "^(@utajir/*)", "^src/*", "^[./]"],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^src/*", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderParserPlugins": ["decorators-legacy", "classProperties", "typescript"]
