--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "dotenv-expand": "^12.0.2",
     "mongoose": "^8.18.0",
     "nest-winston": "^1.10.2",
+    "nestjs-typeorm-paginate": "^4.1.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -66,8 +66,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.1",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
+    "@types/passport-http-bearer": "^1.0.41",
     "@types/pluralize": "^0.0.33",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
