feat: Add admin account seed

--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d orm/orm-migration.config.ts",
+    "typeorm:seed": "typeorm-ts-node-commonjs -d orm/orm-seed.config.ts",
     "migration:create": "typeorm migration:create $path/migrations/$name",
     "migration:generate": "node scripts/generate-migration.js",
     "migration:revert": "npm run typeorm migration:revert",
     "migration:run": "npm run typeorm migration:run",
+    "seed:create": "typeorm migration:create $npm_config_path/seeds/$npm_config_name",
+    "seed:revert": "npm run typeorm:seed migration:revert",
+    "seed:run": "typeorm-ts-node-commonjs -d orm/orm-seed.config.ts migration:run",
+    "seed:show": "npm run typeorm:seed migration:show",
+    "reset:db": "npm run schema:drop && npm run schema:load && npm run migration:run:fake",
     "load:local:containers": "docker compose up -d postgres mongodb redis",
     "drop:local:containers": "docker compose down -v --remove-orphans mysql mongodb redis"
   },
