feat: Add match module with notification and scheduler structure

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "seed:revert": "npm run typeorm:seed migration:revert",
     "seed:run": "typeorm-ts-node-commonjs -d orm/orm-seed.config.ts migration:run",
     "seed:show": "npm run typeorm:seed migration:show",
+    "seed:data": "ts-node -r tsconfig-paths/register src/common/seeds/seed.ts",
     "reset:db": "npm run schema:drop && npm run schema:load && npm run migration:run:fake",
     "load:local:containers": "docker compose up -d postgres mongodb redis minio minio-init",
     "drop:local:containers": "docker compose down -v --remove-orphans postgres mongodb redis minio minio-init"
@@ -44,7 +45,9 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/multer": "^2.0.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
@@ -78,6 +81,7 @@
     "@types/passport-http-bearer": "^1.0.41",
     "@types/pluralize": "^0.0.33",
     "@types/supertest": "^6.0.2",
+    "axios": "^1.11.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
