feat: update environment configuration and add deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,68 @@
-# Environment
+# ===========================================
+# EXPANDERS360 TASK - ENVIRONMENT VARIABLES
+# ===========================================
+
+# =================
+# APPLICATION CONFIG
+# =================
+APP_PORT=3000
+APP_HOST=localhost
 NODE_ENV=development
 
-# Database Configuration (MySQL)
+# =================
+# DATABASE - MySQL/PostgreSQL
+# =================
 DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=expanders_user
-DB_PASSWORD=expanders_password
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 DB_NAME=expanders360
 DB_SSL=false
 
-# MongoDB Configuration
+# =================
+# MONGODB
+# =================
 MONGO_URI=mongodb://admin:admin_password@localhost:27017/expanders360?authSource=admin
 
-# JWT Configuration
+# =================
+# REDIS (Optional)
+# =================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# =================
+# JWT AUTHENTICATION
+# =================
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
-# SMTP Configuration (Email Notifications)
+# =================
+# EMAIL NOTIFICATIONS
+# =================
+# Optional - Leave empty to use mock email service
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
-
-# Admin Configuration
 ADMIN_EMAIL=admin@expanders360.com
 
-# Redis Configuration (for Bull queues)
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# =================
+# S3 STORAGE (MinIO)
+# =================
+S3_ENDPOINT=http://localhost:9000
+S3_REGION=us-east-1
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin123
+S3_BUCKET_NAME=research-documents
 
-# Application Configuration
-PORT=3000
-API_PREFIX=api/v1
-
-# Logging
-LOG_LEVEL=debug
+# =================
+# PRODUCTION OVERRIDES
+# =================
+# For production, override these values:
+# NODE_ENV=production
+# DB_SSL=true
+# DB_HOST=your-production-db-host
+# DB_USERNAME=your-production-db-user
+# DB_PASSWORD=your-secure-production-password
+# JWT_SECRET=your-very-secure-production-jwt-secret
+# SMTP_HOST=your-production-smtp-host
+# S3_ENDPOINT=https://your-production-s3-endpoint
