--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: app-postgres
+    container_name: expanders360-postgres
     image: kartoza/postgis:15-3.3
     environment:
       POSTGRES_USER: postgres
@@ -74,24 +74,6 @@ services:
       - minio
     volumes:
       - ./logs:/app/logs
-    networks:
-      - expanders360-network
-
-  # Optional: MongoDB Express for database management
-  mongo-express:
-    image: mongo-express:latest
-    container_name: expanders360-mongo-express
-    restart: unless-stopped
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: admin_password
-      ME_CONFIG_MONGODB_URL: mongodb://admin:admin_password@mongodb:27017/
-      ME_CONFIG_BASICAUTH_USERNAME: admin
-      ME_CONFIG_BASICAUTH_PASSWORD: admin
-    ports:
-      - "8081:8081"
-    depends_on:
-      - mongodb
     networks:
       - expanders360-network
 
